Atualização sobre o exercício da página web

--- a/HTML/Aulas Udemy/Aula 16 - Unidades de medida/Código-HTML.html
+++ b/HTML/Aulas Udemy/Aula 16 - Unidades de medida/Código-HTML.html
@@ -34,52 +34,48 @@
   </div>
   
   <div class="p1" id="one">
-    <img src="1694104535629.png" alt="Logo">
-    <h1>Nossos Recursos em Destaque</h1>  
-    <br>  
+    <img src="16941045356291.png" alt="Logo">
+    <div class="text-p1">
+      <h1>TECHVANGUARDA</h1>
+      <br>
+    <h2>Nossos Recursos em Destaque</h2>   
     <p>Na TechVanguarda, estamos comprometidos em oferecer a você uma experiência excepcional. Nossos recursos são projetados para tornar sua vida mais fácil, mais produtiva e mais eficiente. Descubra o que torna a nossa aplicação única:</p>
     <br>
-    <dl>
-      <dt>Gerenciamento de Tarefas Simplificado</dt>
-      <dd>Gerencie suas tarefas diárias de forma eficiente com nossa intuitiva ferramenta de gerenciamento de tarefas. Nunca mais perca um prazo importante.</dd>
-      <br>
-    </dl>
-    <dl>
-      <dt>Colaboração em Tempo Real</dt>
-      <dd>Colabore de forma perfeita com sua equipe, esteja você no escritório ou em qualquer lugar do mundo. Veja as atualizações em tempo real e mantenha todos na mesma página.</dd>
-    </dl>
-
+    <h3>Gerenciamento de Tarefas Simplificado</h3>
+    <p>Gerencie suas tarefas diárias de forma eficiente com nossa intuitiva ferramenta de gerenciamento de tarefas. Nunca mais perca um prazo importante.Leve a TechVanguarda com você onde quer que vá. Nossos aplicativos móveis estão disponíveis para iOS e Android, garantindo que você esteja sempre conectado.</p>
+  <br>
+    <h3>Colaboração em Tempo Real</h3>
+    <p>Colabore de forma perfeita com sua equipe, esteja você no escritório ou em qualquer lugar do mundo. Veja as atualizações em tempo real e mantenha todos na mesma página.</p>
+  <br>
+      <h3>Notificações Inteligentes</h3>
+      <p>Fique sempre informado com nossas notificações inteligentes. Receba lembretes, atualizações e alertas em tempo real para que você nunca perca uma oportunidade importante</p>
     <br>
-    <dl>
-      <dt>Notificações Inteligentes</dt>
-      <dd>Fique sempre informado com nossas notificações inteligentes. Receba lembretes, atualizações e alertas em tempo real para que você nunca perca uma oportunidade importante</dd>
-    </dl>
+      <h3>Suporte 24/7</h3>
+      <p>Nossa equipe de suporte dedicada está disponível 24 horas por dia, 7 dias por semana, para ajudá-lo com qualquer dúvida ou problema que possa surgir.</p>
     <br>
-    <dl>
-      <dt>Suporte 24/7</dt>
-      <dd>Nossa equipe de suporte dedicada está disponível 24 horas por dia, 7 dias por semana, para ajudá-lo com qualquer dúvida ou problema que possa surgir.</dd>
-    </dl>
-    <br>
-    <dl>
-      <dt> Aplicativos Móveis</dt>
-      <dd>Leve a TechVanguarda com você onde quer que vá. Nossos aplicativos móveis estão disponíveis para iOS e Android, garantindo que você esteja sempre conectado.</dd>
-    </dl>
-    <br>
-    <dl>
-      <dt>Planos Flexíveis</dt>
-      <dd>Escolha o plano que melhor atende às suas necessidades. Oferecemos uma variedade de opções de assinatura para se adaptar ao seu orçamento e requisitos.</dd>
-    </dl>
+      <h3>Planos Flexíveis</h3>
+      <p>Escolha o plano que melhor atende às suas necessidades. Oferecemos uma variedade de opções de assinatura para se adaptar ao seu orçamento e requisitos.</p>
     <br>
     
-    <p>Pronto para experimentar a TechVanguarda? Clique abaixo para começar sua jornada em direção a uma produtividade aprimorada:</p>
-
-    <div>
-    <button type="submit" name="enviar">COMPRAR</button>
+    <h2>Pronto para experimentar a TechVanguarda? Clique ao lado para começar sua jornada em direção a uma produtividade aprimorada:</h2>
+    <br>
   </div>
+    <button type="submit" name="comprar" id="iadquirir">ADQUIRIR!</button>
 </div>
 
   <div class="p2" id="two">
-    <p>Teste 02</p>
+    <h2>Sobre a TechVanguarda</h2>
+    <p> Na TechVanguarda, nossa jornada começou com uma visão clara: tornar a vida das pessoas mais simples e eficientes através da tecnologia. Fundada por João Pedro B.S em 1997, nossa empresa se dedica a oferecer soluções inovadoras e impactantes para nossos clientes.</p>
+    <br>
+    <h2>Nossa História</h2>
+    <p>Desde o início, temos buscado constantemente maneiras de criar soluções que atendam às necessidades em constante evolução de nossos clientes. A inspiração para nosso projeto surgiu da paixão de João Pedro pela tecnologia e seu desejo de criar algo significativo.</p>
+    <br>
+    <h2>Nossa Missão</h2>
+    <p>Nossa missão é simplificar a vida das pessoas através de soluções tecnológicas inovadoras. Estamos comprometidos em oferecer "qualidade, eficiência e inovação" em tudo o que fazemos.</p>
+    <br>
+    <h2>Nossos copromissos e clientes</h2>
+    <p>Nossos Compromissos
+      Acreditamos firmemente em "colaboração, transparência e excelência". É isso que orienta nossa abordagem em tudo o que fazemos.Nosso foco sempre foi servir nossos clientes da melhor maneira possível. </p>
   </div>
   <div class="p3" id="three">
     <p>Teste 03</p>
