Modificações no código da página web

--- a/HTML/Aulas Udemy/Aula 16 - Unidades de medida/Código-HTML.html
+++ b/HTML/Aulas Udemy/Aula 16 - Unidades de medida/Código-HTML.html
@@ -4,27 +4,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name=“description” content="Website expositivo da marca TechVanguarda especializada em meios tecnológicos.">
+  <meta name=“keywords” content="TechVanguarda, tecnologia, projeto, Clique, começou, suporte">
   <title>Exercício Aula 16</title>
   <link rel="stylesheet" href="Código-CSS.css"> 
+  <link rel="icon" href="Logo-TechVanguard.png">
 </head>
 
 <body>
+  <!--MENU PRINCIPAL-->
  <div>
   <header>
     <div class="conteiner">
-        <ul class="menu">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Portfólio</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Suport</a></li>
+      <a href="http://127.0.0.1:5500/HTML/Aulas%20Udemy/Aula%2016%20-%20Unidades%20de%20medida/C%C3%B3digo-HTML.html" target="_blank"><img class="iLogo-TechVanguard" src="Logo-TechVanguard.png" alt="Logo-TechVanguard"></a>
+        <ul class="conteiner-menu">
+          <li><a href="#"target="_blank">Home</a></li>
+          <li><a href="#"target="_blank">Services</a></li>
+          <li><a href="#"target="_blank">Portfólio</a></li>
+          <li><a href="#"target="_blank">Blog</a></li>
+          <li><a href="#" target="_blank">Suport</a></li>
         </ul>
       </div>
     </header>
   </div>
+  <!--MENU DE LINKS-->
   <div>
     <nav>
-      <div class="conteiner-1">
+      <div class="Menu-nav">
         <p><a href="#one">Features</a></p>
         <p><a href="#two">About</a></p>
         <p><a href="#three">Statics</a></p>
@@ -32,50 +38,30 @@
         </div>
     </nav>
   </div>
-  
-  <div class="p1" id="one">
-    <img src="16941045356291.png" alt="Logo">
-    <div class="text-p1">
+  <!--CONTEÚDO DA PÁGINA-->
+  <div class="Features" id="one">
+    <img src="Logo-TechVanguard.png" alt="Logo">
+    <div class="text-Features">
       <h1>TECHVANGUARDA</h1>
-      <br>
     <h2>Nossos Recursos em Destaque</h2>   
-    <p>Na TechVanguarda, estamos comprometidos em oferecer a você uma experiência excepcional. Nossos recursos são projetados para tornar sua vida mais fácil, mais produtiva e mais eficiente. Descubra o que torna a nossa aplicação única:</p>
-    <br>
-    <h3>Gerenciamento de Tarefas Simplificado</h3>
-    <p>Gerencie suas tarefas diárias de forma eficiente com nossa intuitiva ferramenta de gerenciamento de tarefas. Nunca mais perca um prazo importante.Leve a TechVanguarda com você onde quer que vá. Nossos aplicativos móveis estão disponíveis para iOS e Android, garantindo que você esteja sempre conectado.</p>
-  <br>
-    <h3>Colaboração em Tempo Real</h3>
-    <p>Colabore de forma perfeita com sua equipe, esteja você no escritório ou em qualquer lugar do mundo. Veja as atualizações em tempo real e mantenha todos na mesma página.</p>
-  <br>
-      <h3>Notificações Inteligentes</h3>
-      <p>Fique sempre informado com nossas notificações inteligentes. Receba lembretes, atualizações e alertas em tempo real para que você nunca perca uma oportunidade importante</p>
-    <br>
-      <h3>Suporte 24/7</h3>
-      <p>Nossa equipe de suporte dedicada está disponível 24 horas por dia, 7 dias por semana, para ajudá-lo com qualquer dúvida ou problema que possa surgir.</p>
-    <br>
-      <h3>Planos Flexíveis</h3>
-      <p>Escolha o plano que melhor atende às suas necessidades. Oferecemos uma variedade de opções de assinatura para se adaptar ao seu orçamento e requisitos.</p>
-    <br>
-    
-    <h2>Pronto para experimentar a TechVanguarda? Clique ao lado para começar sua jornada em direção a uma produtividade aprimorada:</h2>
-    <br>
+    <p>Bem-vindo à página web da TechVanguarda, onde a inovação e o avanço tecnológico são a nossa essência. Estamos entusiasmados por apresentar a você uma série de recursos excepcionais que tornarão a sua experiência online mais eficiente, envolvente e inspiradora. Confira abaixo alguns dos nossos recursos exclusivos:</p>
+    <ol type="1">
+      <li>Navegue facilmente em um design moderno e limpo.</li>
+      <li>Encontre o que precisa com nossa busca avançada.</li>
+      <li>Receba recomendações relevantes baseadas em suas preferências.</li>
+      <li>Suporte ao cliente disponível a qualquer momento.</li>
+      <li>Mantenha-se protegido com nossa criptografia de última geração.Fique atualizado com nossas últimas notícias e atualizações.</li>
+      <li>Compartilhe descobertas com amigos via redes sociais.</li>
+      <li>Experimente em dispositivos móveis.</li>
+      <li>Leia artigos informativos em nosso blog.</li>
+      <li>Compre produtos e serviços sem complicações.</li>
+    </ol>
+    <p>Na TechVanguarda, estamos comprometidos em proporcionar a você uma experiência online excepcional. Explore nossos recursos inovadores e descubra como estamos moldando o futuro da tecnologia. Junte-se a nós nesta jornada emocionante!</p>
   </div>
-    <button type="submit" name="comprar" id="iadquirir">ADQUIRIR!</button>
+    <button type="submit" name="confira" id="iconfira">CONFIRA!</button>
 </div>
 
   <div class="p2" id="two">
-    <h2>Sobre a TechVanguarda</h2>
-    <p> Na TechVanguarda, nossa jornada começou com uma visão clara: tornar a vida das pessoas mais simples e eficientes através da tecnologia. Fundada por João Pedro B.S em 1997, nossa empresa se dedica a oferecer soluções inovadoras e impactantes para nossos clientes.</p>
-    <br>
-    <h2>Nossa História</h2>
-    <p>Desde o início, temos buscado constantemente maneiras de criar soluções que atendam às necessidades em constante evolução de nossos clientes. A inspiração para nosso projeto surgiu da paixão de João Pedro pela tecnologia e seu desejo de criar algo significativo.</p>
-    <br>
-    <h2>Nossa Missão</h2>
-    <p>Nossa missão é simplificar a vida das pessoas através de soluções tecnológicas inovadoras. Estamos comprometidos em oferecer "qualidade, eficiência e inovação" em tudo o que fazemos.</p>
-    <br>
-    <h2>Nossos copromissos e clientes</h2>
-    <p>Nossos Compromissos
-      Acreditamos firmemente em "colaboração, transparência e excelência". É isso que orienta nossa abordagem em tudo o que fazemos.Nosso foco sempre foi servir nossos clientes da melhor maneira possível. </p>
   </div>
   <div class="p3" id="three">
     <p>Teste 03</p>
